--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   /* Add your global styles here */
   body {
-    font-family: "--font-jetbrainsMono";
+    font-family: var(--font-jetbrainsMono, monospace);
     background-color: rgb(21, 21, 31);
     color: white;
   }
@@ -26,7 +26,7 @@
     -webkit-text-stroke: 1px #ffffff;
   }
 
-  .text-outline-hover {
+  .text-outline-hover:hover {
     -webkit-text-stroke: 1px #00ff99;
   }
 }
